--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.1"
+    "axios": "^0.18.0",
+    "draft-js": "^0.10.5",
+    "markdown-draft-js": "^1.3.1",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "redraft": "^0.10.2",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
